This file lists all changes made to the game driver in all gory detail.
See the file HISTORY for a user-oriented summary of all the changes.

22-Apr-2002 (Lars Duening)  (3.3.447)
  - (pkg-mccp, comm, gcollect.c, configure) Added MCCP support (thanks,
       Dafire!) (p-011012, p-020810-1).

21-Apr-2002 (Lars Duening)  (3.3.446)
  - (pkg-pgsql.c) Corrected a crasher during a GC.
  - (smalloc.c) Corrected the small-free-block statistics.

19-Apr-2002 (Lars Duening)  (3.3.445)
  - (pkg-pgsql, configure, other files) Added PostgreSQL implementation
       based on the code donated by Ctx (thanks!) (f-011229-0).

13-Apr-2002 (Lars Duening)  (3.3.444)
  - (smalloc.c) Removed compilation warnings.

13-Apr-2002 (Lars Duening)  (3.3.443)
  - (func_spec, object) The efuns save_value() and save_object() can now
       create savefiles in the old format as well.

12-Apr-2002 (Lars Duening)  (3.3.442)
  - (xalloc.c) Corrected a compilation error when MALLOC_TRACE was not
       defined.

12-Apr-2002 (Lars Duening)  (3.3.441)
  - (smalloc.c) Adjacent free small blocks are now merged automatically
       as soon as they are detected. This reduces the mem_consolidation()
       call to detecting and freeing totally unused small chunks.
  - (xalloc.c) The block dump of lost blocks now prints a proper hexdump
       instead of just dumping the data as-is.

11-Apr-2002 (Lars Duening)  (3.3.440)
  - (smalloc.c) A bit of code cleanup; and in preparation for the planned
       automatic small block defragmentation introduced 'free' flags for
       small blocks and a minimum payload size.

09-Apr-2002 (Lars Duening)  (3.3.439)
  - (efuns.c, strfuns, func_spec) Efuns filter() and map() can be used on
       strings.

09-Apr-2002 (Lars Duening)  (3.3.438)
  - (heartbeat.c) Removed the pooled allocation of heartbeat structures:
       Muds have spikes of high callout usage, but a low usage over
       the longterm average, so most of the pooled structures are not