@@ -58,12 +58,12 @@
 ;; TODO:: replace-program and the saving/storing of lfun closure values.
 ;; TODO:: Is this desirable anyway?
               
-(Project-Version lpmud 3-3 447)
-(Parent-Version lpmud 3-3 446)
-(Version-Log "Implemented MCCP from the Finalfrontier patches.")
+(Project-Version lpmud 3-3 448)
+(Parent-Version lpmud 3-3 447)
+(Version-Log "Corrected an invalid memory read in int_call_lambda().")
 (New-Version-Log
 "")
-(Checkin-Time "Tue, 22 Apr 2003 23:02:45 -0600")
+(Checkin-Time "Thu, 24 Apr 2003 00:12:41 -0600")
 (Checkin-Login lars)
 (Populate-Ignore ("~$" "\\.o$" "core$" "\\.emacs" "\\.a$" "\\.deps"
                   "\\.gz$" "\\.orig$" "\\.rej$" "\\.xSYM" "^driver$"
@@ -100,7 +100,7 @@
   (README (lpmud/n/0_README 1.4.1.1 644))
   (COPYRIGHT (lpmud/d/20_Copyright 1.10.1.10 644))
   (CREDITS (lpmud/d/22_CREDITS 1.70.1.63 644))
-  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.510 644))
+  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.511 644))
   (HISTORY (lpmud/f/49_HISTORY 1.321 644))
   (INSTALL (lpmud/d/18_INSTALL 1.11.1.19 644))
   (COPYING.LIB (lpmud/k/14_COPYING.LI 1.2 644))
@@ -129,14 +129,13 @@
   (src/settings/dragonfire (lpmud/o/14_dragonfire 1.3 755))
   (src/settings/dt2 (lpmud/f/5_dt2 1.1.1.5 744))
   (src/settings/eotl (lpmud/g/40_eotl 1.2.1.5 744))
-  (src/settings/evermore (lpmud/e/31_evermore 1.1.1.8 744))
-  (src/settings/evermore-cross (lpmud/a/b/25_evermore-c 1.4 744))
+  (src/settings/evermore (lpmud/e/31_evermore 1.1.1.9 744))
   (src/settings/finalfrontier (lpmud/i/29_finalfront 1.1.1.6 744))
   (src/settings/forgottendreams (lpmud/h/2_forgottend 1.2.1.8 744))
   (src/settings/heaven7 (lpmud/k/22_heaven7 1.5 644))
   (src/settings/hyperborea (lpmud/h/20_hyperborea 1.3 744))
   (src/settings/morgengrauen (lpmud/k/37_morgengrau 1.7 744))
-  ;(src/settings/lethynna (lpmud/d/b/21_lethynna 1.1 744))
+  (src/settings/lpmud.net (lpmud/e/b/7_lpmud.net 1.1 744))
   (src/settings/osb (lpmud/c/8_osb 1.19 744))
   (src/settings/pkmud (lpmud/c/25_pkmud 1.5.1.5 744))
   (src/settings/psycmuve (lpmud/i/42_psycmuve 1.1.1.6 744))
@@ -189,7 +188,7 @@
   (src/heartbeat.c (lpmud/m/42_heartbeat. 1.18.1.9 644))
   (src/i-svalue_cmp.h (lpmud/a/b/20_i-svalue_c 1.3 644))
   (src/interpret.h (lpmud/b/13_interpret. 1.33.1.36 644))
-  (src/interpret.c (lpmud/b/14_interpret. 1.125.1.103.1.54.1.28 644))
+  (src/interpret.c (lpmud/b/14_interpret. 1.125.1.103.1.54.1.29 644))
   (src/lex.h (lpmud/b/11_lex.h 1.16.1.15.1.4 644))
   (src/lex.c (lpmud/b/12_lex.c 1.62.1.71.1.54 644))
   (src/main.h (lpmud/f/31_main.h 1.14.1.4.1.16 644))
@@ -283,7 +282,7 @@
   (src/smalloc.h (lpmud/29_smalloc.h 1.16.1.14 644))
   (src/smalloc.c (lpmud/30_smalloc.c 1.31.1.80 644))
   (src/structs.h (lpmud/d/b/5_structs.h 1.4 644))
-  (src/structs.c (lpmud/d/b/6_structs.c 1.12 644))
+  (src/structs.c (lpmud/d/b/6_structs.c 1.13 644))
   (src/sysmalloc.h (lpmud/c/b/33_sysmalloc. 1.2 644))
   (src/sysmalloc.c (lpmud/c/b/34_sysmalloc. 1.3 644))
   (src/sprintf.h (lpmud/f/15_sprintf.h 1.3.1.4 644))
