@@ -5,7 +5,7 @@
 # configure will strip this part from the script.
 #-------------------------------------------------------------------------
 
-exec ./configure --prefix=/home/evermore/ --bindir=/home/evermore/bin/native --libdir=/home/evermore/lib/nativelib --libexec=/home/evermore/bin/native/erq_dir --with-setting=evermore $*
+exec ./configure --prefix=/home/evermore/ --bindir=/home/evermore/bin --libdir=/home/evermore/mudlib --libexec=/home/evermore/bin/erq_dir --with-setting=evermore $*
 exit 1
 
 # --- The actual settings ---
@@ -22,8 +22,8 @@ with_time_to_clean_up=3600
 # we reset every 45 minutes
 with_time_to_reset=2700
 
-# default eval cost maximum is 2 000 000
-with_max_cost=2000000
+# default eval cost maximum is 5 000 000
+with_max_cost=50000000
 
 # default port is telnet
 with_portno=23
@@ -57,6 +57,8 @@ enable_share_variables=no
 
 # we do not need those old commands
 enable_use_parse_command=no
+enable_use_set_light=no
+enable_use_process_string=no
 
 # its better as getting errors
 enable_dynamic_costs=yes
@@ -70,8 +72,8 @@ enable_use_deprecated=no
 # we need the alists
 enable_use_alists=yes
 
-# PCRE are too new
-enable_use_pcre=no
+# we use this but in a special way
+enable_strict_euids=no
 
 # this is far in the future
 with_max_players=70
@@ -79,3 +81,19 @@ with_max_players=70
 # this not
 with_max_local=100
 
+# we need a bit more
+with_max_user_trace=190
+with_max_trace=200
+
+with_optimize=no
+
+enable_malloc_trace=yes
+enable_malloc_lpc_trace=yes
+
+with_reserved_user_size=800000
+with_catch_reserved_cost=0xF000
+with_master_reserved_cost=0xF000
+with_max_malloced=0
+
+enable_use_system_crypt=no
+enable_with_pthreads=no
