@@ -1,96 +1,0 @@
-#!/bin/sh    
-#
-# Settings for the Evermore mudlib greater v 1.4.0 (Native Mode)
-#
-# configure will strip this part from the script.
-#-------------------------------------------------------------------------
-
-exec ./configure --prefix=/home/evermore/ --bindir=/home/evermore/bin --libdir=/home/evermore/mudlib --libexec=/home/evermore/bin/erq_dir --with-setting=evermore-cross $*
-exit 1
-
-# --- The actual settings ---
-
-# we do not want a limit on those sizes
-with_max_array_size=0
-with_max_mapping_size=0
-with_read_file_max_size=0
-with_max_byte_transfer=0
-
-# we clean up every hour
-with_time_to_clean_up=3600
-
-# we reset every 45 minutes
-with_time_to_reset=2700
-
-# default eval cost maximum is 5 000 000
-with_max_cost=50000000
-
-# default port is telnet
-with_portno=23
-
-# our udp port is 7780
-with_udp_port=7780
-
-# we have only 2 ports at max
-with_maxnumports=2
-
-# we use the extended erq
-enable_erq=erq
-
-# we are no longer operating at compat moe
-enable_compat_mode=yes
-
-# but our master resides in a non standard dir
-with_master_name=kernel/master
-
-# our swap file is in tmp
-with_swap_file=tmp/LP_SWAP.3
-
-# we do not use the WIZLIST
-with_wizlist_file=no
-
-# our ACCESS.ALLOW file is in etc
-with_access_file=etc/ACCESS.ALLOW
-
-# we initialize using the __INIT() function
-enable_share_variables=no
-
-# we do not need those old commands
-enable_use_parse_command=no
-enable_use_set_light=no
-enable_use_process_string=no
-
-# its better as getting errors
-enable_dynamic_costs=yes
-
-# we want mysql 
-enable_use_mysql=yes
-
-# but we do not want old names for efuns
-enable_use_deprecated=no
-
-# we need the alists
-enable_use_alists=yes
-
-# we use this but in a special way
-enable_strict_euids=no
-
-# this is far in the future
-with_max_players=70
-
-# this not
-with_max_local=100
-
-# we need a bit more
-with_max_user_trace=190
-with_max_trace=200
-
-enable_malloc_trace=yes
-enable_malloc_lpc_trace=yes
-
-with_reserved_user_size=800000
-with_catch_reserved_cost=0xF000
-with_master_reserved_cost=0xF000
-with_max_malloced=0
-
-enable_with_pthreads=no
